# movie-recommender

./: .gitignore  LESSONS_LEARNED.md  README.md  best_hps.npy  best_params_xgb.npy  pyproject.toml  requirements-gcp.txt  requirements-local.txt  training.ipynb
recommender/pipeline/: create_pipeline.py  movie-pipeline.yaml
recommender/pipeline/components/dataflow_preprocessing/: Dockerfile  Makefile  main.py  preprocessing.yaml
recommender/pipeline/components/dataflow_preprocessing/scripts/: build.sh  env.sh  push.sh  run.sh
recommender/pipeline/components/training/: Dockerfile  dataset.py  main.py  models.py  requirements.txt  train.py  training.yaml
recommender/pipeline/components/training/scripts/: env.sh  login.sh
