[project]
name = "movie-recommender"
version = "0.1.0"
description = "Pipeline to develop a movie recommendation system"
authors = [
    {name = "mckinneydavid1", email = "40120430+mckinneydavid1@users.noreply.github.com"}
]
license = {text = "MIT License"}
package-mode = false

readme = "README.md"

requires-python = ">=3.10,<3.11"
dependencies = [
    "tensorflow (==2.11.0)",
    "tensorflow-recommenders (==0.7.2)",
    "google-cloud-bigquery (>=3.27.0,<4.0.0)",
    "db-dtypes (>=1.3.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
