[project]
name = "movie-recommender"
version = "0.1.0"
description = "Pipeline to develop a movie recommendation system"
authors = [
    {name = "mckinneydavid1", email = "40120430+mckinneydavid1@users.noreply.github.com"}
]
license = {text = "MIT License"}
package-mode = false

readme = "README.md"

requires-python = ">=3.10,<=3.12.2"
dependencies = [
    "google-cloud-bigquery (==3.14.0)",
    "numpy (==1.26.4)",
    "pandas (>=2.2.3,<3.0.0)",
    "db-dtypes (>=1.3.1,<2.0.0)",
    "tensorflow (==2.11.0)",
    "faiss-cpu (>=1.9.0.post1,<2.0.0)",
    "tensorflow-ranking (>=0.5.5,<0.6.0)",
    "protobuf (==3.19.6)",
    "keras-tuner (>=1.4.7,<2.0.0)",

]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
